[WIP] Fix address line spacing on narrow screens (#30)
* Initial plan

* Fix address line spacing in impressum for narrow screens


---------

--- a/css/layout.css
+++ b/css/layout.css
@@ -235,3 +235,13 @@ main {
     line-height: 1.8;
     margin-bottom: 15px;
 }
+
+.legal-content .address-block {
+    line-height: 1.3;
+}
+
+.legal-content .address-block br {
+    display: block;
+    content: "";
+    margin-top: 0.5em;
+}
